foundations/landing-page/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Roboto, sans-serif;
}

header {
    display: flex;
    justify-content: space-between;
    padding: 16px;
    background-color: #1f2937;
    align-items: center;
}

.logo {
    font-size: 24px;
    color: #f9faf8;
    font-weight: bold;
    margin-left: 200px;
}

.links ul {
    display: flex;
    list-style: none;
    gap: 24px;
    margin-right: 200px;
}

li a {
    text-decoration: none;
    font-size: 18px;
    color: #e5e7eb;
}

.hero {
    background-color: #1f2937;
    padding: 90px 0 120px;
    display: flex;
    justify-content: center;
    align-items: flex-start;
    gap: 80px;
}

.hero-main {
    width: 480px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    gap: 15px;
    height: 250px;
}

.hero-title {
    font-size: 48px;
    font-weight: 900;
    color: #f9f8fa;
    width: 500px;
}

.hero-desc {
    font-size: 18px;
    color: #e5e7eb;
}

span {
    font-weight: 700;
    background-color: #6f2937;
    padding: 0 7px;
}

button {
    background-color: #3882f6;
    color: #fff;
    font-size: 18px;
    padding: 6px 30px;
    border-radius: 8px;
    border: 0;
}

.info {
    margin-bottom: 400px; /* REMOVE ME */
    padding: 50px 0;
}

.info-title {
    font-size: 36px;
    color: #1f2937;
    font-weight: 900;
    text-align: center;
    margin-bottom: 50px;
}

.info-container {
    display: flex;
    justify-content: center;
    gap: 50px;
    flex-wrap: wrap;
}

.info-box {
    border: 4px #3882f6 solid;
    border-radius: 20px;
    width: 175px;
    height: 175px;
    overflow: hidden;
}

img {
    height: 100%;
    width: 100%;
    object-fit: cover;
}

